Automatic fuzztest not possible with openSAFETY when SercosIII plugin is not found
This issue was migrated from bug 5977 in our old bug tracker.
Original bug information:
Reporter: Roland Knall
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Ubuntu
Platform: x86-64
Version: 1.6.0
Attachments:
wireshark_opensafety_sercosiii.patch: Thsi patch adapts the openSAFETY dissector for detection, if the SercosIII plugin got loaded
wireshark_opensafety_sercosiii.patch: Handling of SercosIII if the plugin can not be loaded